--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
   <header class="bg-secondary text-white">
     <div class="container text-center">
-      <h1>ADD TITLE here</h1>
-      <p class="lead">by ADD NAME(S) here</p>
+      <h1>Archana's New Headline here </h1>
+      <p class="lead"> Archana and Azka </p>
       <p class="lead">Last updated on ADD CURRENT DATE</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
